# graphrag

./: README.md
graphrag/: README.md  graphrag_cli.py  pyproject.toml  requirements.txt
graphrag/data/sample/: ai_companies.txt  climate_science.txt
graphrag/notebooks/: demo.ipynb
graphrag/src/: __init__.py  graph_builder.py  llm.py  persistence.py  pipeline.py  retriever.py
graphrag/tests/: test_graphrag.py
